FIX: spacing on mobile

--- a/src/assets/styles/components/_hero.scss
+++ b/src/assets/styles/components/_hero.scss
@@ -32,6 +32,8 @@
     
     @include medium-display {
       flex-flow: column;
+      gap: var(--spacing-400);
+      height: auto;
       padding: $spacing-200;
     }
   }
